# proyecto5-grupo4

./: .dockerignore  .gitignore  Dockerfile  EDA.ipynb  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: import-jira.yml  import_jira.py
Regression_Logistic/: logistica_tfidf.py
backend/: main.py
data/processed/: dev.parquet  merged_edos_sexism.parquet  test.parquet  train.parquet
docs/: categories_edos.md
eda/: Eda - Edos.ipynb  Eda - Edos.py  class_imbalance.py  full_eda.ipynb  full_eda.py
edaedos/: EDA.ipynb
frontend/godot-project/: .gitignore  Main.tscn  end_of_level.gd  end_of_level.gd.uid  final_screen.gd  final_screen.gd.uid  index.apple-touch-icon.png.import  index.icon.png.import  index.png.import  luna.gd  luna.gd.uid  nebula_far.png.import  oracle_1.gd  oracle_1.gd.uid  oracle_intro.gd  oracle_intro.gd.uid  portal_green.gd  portal_green.gd.uid  portal_white.gd  portal_white.gd.uid  portal_yellow.gd  portal_yellow.gd.uid  project.godot  slide_viewer.gd  slide_viewer.gd.uid  starfield_mid.png.import  starfield_near.png.import  tileable_nebula_far.png.import  tileable_starfield_mid.png.import  tileable_starfield_near.png.import
models/: data_pipeline.py  train_model_distilbert.py
models/distilbert/: config.pt  data_pipeline_distilbert.py  dev_data.safetensors  train_model.py  train_model_distilbert.py
models/ensemble/: trained_ensemble.py  weights.json
models/logistic_regression/: data_pipeline.py  model.joblib  test_labels.npy  train_model.py  vectorizer.joblib
scripts/: merge_datasets.py  predict.py
(+234 files in other folders)
