[project]
name = "proyecto5-grupo4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.2",
    "datasets>=5.0.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "textblob>=0.20.0",
    "torch>=2.12.1",
    "torch-optim>=0.0.4",
    "transformers>=5.13.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]
